Primeros apuntes de matplotlib

--- a/numpy_pandas.ipynb
+++ b/numpy_pandas.ipynb
@@ -789,11 +789,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.11493577585374615\n",
-      "[0.87598206 0.23440841 0.58681293 0.13046963]\n",
-      "[[0.19340293 0.07685667]\n",
-      " [0.6399773  0.04596837]\n",
-      " [0.92872669 0.17426227]]\n"
+      "0.2679013063218262\n",
+      "[0.95041135 0.43537102 0.50308798 0.7274861 ]\n",
+      "[[0.87728235 0.14375295]\n",
+      " [0.48766879 0.63317384]\n",
+      " [0.75320177 0.95607393]]\n"
      ]
     }
    ],
@@ -813,10 +813,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "[[8 5 5 4]\n",
-      " [1 6 1 2]\n",
-      " [1 2 4 5]]\n"
+      "12\n",
+      "[[8 5 7 1]\n",
+      " [9 2 9 8]\n",
+      " [9 3 4 5]]\n"
      ]
     }
    ],
@@ -835,10 +835,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i\n",
-      "[[ True False  True False  True]\n",
-      " [False  True False  True  True]\n",
-      " [False False  True  True False]]\n"
+      "a\n",
+      "[[ True False  True  True False]\n",
+      " [ True False  True False False]\n",
+      " [ True False  True False False]]\n"
      ]
     }
    ],
@@ -871,9 +871,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 6]\n",
-      " [1 9]\n",
-      " [4 4]]\n",
+      "[[4 1]\n",
+      " [3 1]\n",
+      " [1 1]]\n",
       "(3, 2)\n"
      ]
     }
@@ -901,7 +901,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 6 1 9 4 4]]\n"
+      "[[4 1 3 1 1 1]]\n"
      ]
     }
    ],
@@ -919,8 +919,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 6 1]\n",
-      " [9 4 4]]\n"
+      "[[4 1 3]\n",
+      " [1 1 1]]\n"
      ]
     }
    ],
@@ -937,9 +937,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 6]\n",
-      " [1 9]\n",
-      " [4 4]]\n"
+      "[[4 1]\n",
+      " [3 1]\n",
+      " [1 1]]\n"
      ]
     }
    ],
@@ -956,8 +956,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 6 1]\n",
-      " [9 4 4]]\n"
+      "[[4 1 3]\n",
+      " [1 1 1]]\n"
      ]
     }
    ],
@@ -975,8 +975,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 4 9]\n",
-      " [1 6 4]]\n"
+      "[[4 1 1]\n",
+      " [3 1 1]]\n"
      ]
     }
    ],
@@ -994,8 +994,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 6 1]\n",
-      " [9 4 4]]\n"
+      "[[4 1 3]\n",
+      " [1 1 1]]\n"
      ]
     }
    ],
@@ -1029,7 +1029,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  8 15  5  1 17  9 18  5  2]\n"
+      "[16  8  2  9 10  6 10 19 11  5]\n"
      ]
     }
    ],
@@ -1047,7 +1047,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n"
+      "19\n"
      ]
     }
    ],
@@ -1065,8 +1065,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1  8 15  5  1]\n",
-      " [17  9 18  5  2]]\n"
+      "[[16  8  2  9 10]\n",
+      " [ 6 10 19 11  5]]\n"
      ]
     }
    ],
@@ -1084,9 +1084,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n",
-      "[17  9 18  5  2]\n",
-      "[15 18]\n"
+      "19\n",
+      "[16 10 19 11 10]\n",
+      "[16 19]\n"
      ]
     }
    ],
@@ -1107,8 +1107,8 @@
      "output_type": "stream",
      "text": [
       "7\n",
-      "[1 1 1 0 1]\n",
-      "[2 2]\n"
+      "[0 1 1 1 0]\n",
+      "[0 2]\n"
      ]
     }
    ],
@@ -1128,10 +1128,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1\n",
-      "[ 1  8 15  5  1]\n",
-      "[1 2]\n"
+      "2\n",
+      "2\n",
+      "[6 8 2 9 5]\n",
+      "[2 5]\n"
      ]
     }
    ],
@@ -1152,9 +1152,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "[0 0 0 0 0]\n",
-      "[0 4]\n"
+      "2\n",
+      "[1 0 0 0 1]\n",
+      "[2 4]\n"
      ]
     }
    ],
@@ -1174,7 +1174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  8 15  5  1 17  9 18  5  2]\n"
+      "[16  8  2  9 10  6 10 19 11  5]\n"
      ]
     }
    ],
@@ -1209,8 +1209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1  8 15  5  1]\n",
-      " [17  9 18  5  2]]\n"
+      "[[16  8  2  9 10]\n",
+      " [ 6 10 19 11  5]]\n"
      ]
     }
    ],
@@ -1227,8 +1227,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[16  1  3  0  1]\n",
-      "[14 16]\n"
+      "[10  2 17  2  5]\n",
+      "[14 14]\n"
      ]
     }
    ],
@@ -1257,11 +1257,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  1  2  5  5  8  9 15 17 18] \n",
+      "[ 2  5  6  8  9 10 10 11 16 19] \n",
       "\n",
-      "1.0\n",
-      "6.5\n",
-      "18.0\n"
+      "2.0\n",
+      "9.5\n",
+      "19.0\n"
      ]
     }
    ],
@@ -1284,9 +1284,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.5\n",
-      "[ 4.5  5.   8.5 11.  11.5]\n",
-      "[ 2. 15.]\n"
+      "9.5\n",
+      "[ 6.   7.5  8.5 12.  14. ]\n",
+      "[ 6. 11.]\n"
      ]
     }
    ],
@@ -1307,9 +1307,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.1\n",
-      "[ 4.5  5.   8.5 11.  11.5]\n",
-      "[ 2.8 13.4]\n"
+      "9.6\n",
+      "[ 6.   7.5  8.5 12.  14. ]\n",
+      "[ 6.  13.2]\n"
      ]
     }
    ],
@@ -1329,9 +1329,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.29\n",
-      "[12.25 16.   42.25 36.   42.25]\n",
-      "[ 3.36 17.04]\n"
+      "22.64\n",
+      "[16.    6.25  6.25 16.   25.  ]\n",
+      "[ 6.   13.36]\n"
      ]
     }
    ],
@@ -1351,9 +1351,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.187891401761993\n",
-      "[3.5 4.  6.5 6.  6.5]\n",
-      "[1.83303028 4.12795349]\n"
+      "4.758150901348127\n",
+      "[4.  2.5 2.5 4.  5. ]\n",
+      "[2.44948974 3.65513338]\n"
      ]
     }
    ],
@@ -1807,6 +1807,14 @@
       "\n",
       "Mbappe \n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3333/3099990159.py:7: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "  print(players2[0:3], '\\n')\n"
      ]
     }
    ],
@@ -3765,38 +3773,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>Delivering Happiness: A Path to Profits, Passi...</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>Non Fiction</td>\n",
+       "      <th>479</th>\n",
+       "      <td>The Very Hungry Caterpillar</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Fiction</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>Crazy Love: Overwhelmed by a Relentless God</td>\n",
+       "      <th>238</th>\n",
+       "      <td>Mockingjay (The Hunger Games)</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>The Unofficial Harry Potter Cookbook: From Cau...</td>\n",
        "      <td>4.7</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>Non Fiction</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>234</th>\n",
-       "      <td>Mindset: The New Psychology of Success</td>\n",
-       "      <td>4.6</td>\n",
        "      <td>10</td>\n",
-       "      <td>2015</td>\n",
+       "      <td>2019</td>\n",
        "      <td>Non Fiction</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>461</th>\n",
-       "      <td>The Short Second Life of Bree Tanner: An Eclip...</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2010</td>\n",
+       "      <th>251</th>\n",
+       "      <td>Oh, the Places You'll Go!</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2018</td>\n",
        "      <td>Fiction</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -3806,16 +3814,16 @@
       ],
       "text/plain": [
        "                                                Nombre  Rating  Precio   Año  \\\n",
-       "68   Delivering Happiness: A Path to Profits, Passi...     4.6      15  2010   \n",
-       "52         Crazy Love: Overwhelmed by a Relentless God     4.7      14  2011   \n",
-       "234             Mindset: The New Psychology of Success     4.6      10  2015   \n",
-       "461  The Short Second Life of Bree Tanner: An Eclip...     4.6       0  2010   \n",
+       "479                        The Very Hungry Caterpillar     4.9       5  2016   \n",
+       "238                      Mockingjay (The Hunger Games)     4.5       8  2012   \n",
+       "475  The Unofficial Harry Potter Cookbook: From Cau...     4.7      10  2019   \n",
+       "251                          Oh, the Places You'll Go!     4.9       8  2018   \n",
        "\n",
        "          Genero  Nueva  \n",
-       "68   Non Fiction    NaN  \n",
-       "52   Non Fiction    NaN  \n",
-       "234  Non Fiction    NaN  \n",
-       "461      Fiction    NaN  "
+       "479      Fiction    NaN  \n",
+       "238      Fiction    NaN  \n",
+       "475  Non Fiction    NaN  \n",
+       "251      Fiction    NaN  "
       ]
      },
      "execution_count": 92,
@@ -4004,7 +4012,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6758/482942692.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_3333/482942692.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df_books.append(df_books) # deprecado\n"
      ]
     },
@@ -4561,7 +4569,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6758/1823426374.py:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/tmp/ipykernel_3333/1823426374.py:2: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  df.fillna(df.mean())\n"
      ]
     },
@@ -6487,49 +6495,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>First 100 Words</td>\n",
-       "      <td>Roger Priddy</td>\n",
+       "      <th>493</th>\n",
+       "      <td>Things That Matter: Three Decades of Passions,...</td>\n",
+       "      <td>Charles Krauthammer</td>\n",
        "      <td>4.7</td>\n",
-       "      <td>17323</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>7034</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2013</td>\n",
        "      <td>Non Fiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>Doctor Sleep: A Novel</td>\n",
-       "      <td>Stephen King</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>15845</td>\n",
-       "      <td>13</td>\n",
+       "      <th>71</th>\n",
+       "      <td>Diary of a Wimpy Kid: Hard Luck, Book 8</td>\n",
+       "      <td>Jeff Kinney</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>6812</td>\n",
+       "      <td>0</td>\n",
        "      <td>2013</td>\n",
        "      <td>Fiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>303</th>\n",
-       "      <td>Strange Planet (Strange Planet Series)</td>\n",
-       "      <td>Nathan W. Pyle</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>9382</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Fiction</td>\n",
+       "      <th>256</th>\n",
+       "      <td>One Thousand Gifts: A Dare to Live Fully Right...</td>\n",
+       "      <td>Ann Voskamp</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3163</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Non Fiction</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       Name          Author  User Rating  \\\n",
-       "114                         First 100 Words    Roger Priddy          4.7   \n",
-       "79                    Doctor Sleep: A Novel    Stephen King          4.7   \n",
-       "303  Strange Planet (Strange Planet Series)  Nathan W. Pyle          4.9   \n",
+       "                                                  Name               Author  \\\n",
+       "493  Things That Matter: Three Decades of Passions,...  Charles Krauthammer   \n",
+       "71             Diary of a Wimpy Kid: Hard Luck, Book 8          Jeff Kinney   \n",
+       "256  One Thousand Gifts: A Dare to Live Fully Right...          Ann Voskamp   \n",
        "\n",
-       "     Reviews  Price  Year        Genre  \n",
-       "114    17323      4  2018  Non Fiction  \n",
-       "79     15845     13  2013      Fiction  \n",
-       "303     9382      6  2019      Fiction  "
+       "     User Rating  Reviews  Price  Year        Genre  \n",
+       "493          4.7     7034     15  2013  Non Fiction  \n",
+       "71           4.8     6812      0  2013      Fiction  \n",
+       "256          4.6     3163     13  2012  Non Fiction  "
       ]
      },
      "execution_count": 113,
@@ -7574,6 +7582,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3333/1216151895.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  df_books.groupby('Author').sum().loc['William Davis']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "User Rating        8.8\n",
@@ -7598,6 +7614,14 @@
    "execution_count": 122,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3333/3793268658.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  df_books.groupby('Author').sum().reset_index()\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -10493,7 +10517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10504,7 +10528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -10524,7 +10548,7 @@
        "Name: User Rating, Length: 550, dtype: float64"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10536,7 +10560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -10556,7 +10580,7 @@
        "Name: User Rating, Length: 550, dtype: float64"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10568,7 +10592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -10588,7 +10612,7 @@
        "Length: 550, dtype: float64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10601,11 +10625,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "172c3fd17db4ff20d3574cf211e94ed8f11c92bb0caaa242e4accece9ac973bb"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('dataScience')",
+   "display_name": "dataScience",
    "language": "python",
    "name": "python3"
   },
@@ -10619,9 +10640,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c945f6d83d72e19eb2b7ec94abcf77b0f9daa2e659cc8b67e7750094d012f453"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
